--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'library'
+            keyPassword '111111'
+            storeFile file('D:/Android/aiwsoft/library app/android_library_keystore.jks')
+            storePassword '111111'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.aiwsoft.androidlibraries"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -15,12 +23,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.config
+        }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26+'
+    implementation 'com.android.support:design:26+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:26.+'
     implementation 'com.google.android.gms:play-services-ads:11.0.4'
     implementation 'com.google.firebase:firebase-ads:11.0.4'
@@ -30,7 +43,10 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.thefinestartist:finestwebview:1.2.7'
     compile 'de.cketti.mailto:email-intent-builder:1.0.0'
+    compile 'nl.psdcompany:duo-navigation-drawer:2.0.7'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
