--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aiwsoft.androidlibraries">
+
     <!-- Include required permissions for Google Mobile Ads to run. -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -28,31 +29,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".AllActivity"
             android:configChanges="screenLayout"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait"
-            android:windowSoftInputMode="adjustNothing"></activity> <!-- Include the AdActivity configChanges and theme. -->
+            android:windowSoftInputMode="adjustNothing" /> <!-- Include the AdActivity configChanges and theme. -->
 
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:screenOrientation="sensorPortrait"
             android:theme="@android:style/Theme.Translucent" />
-
         <activity
             android:name="com.thefinestartist.finestwebview.FinestWebViewActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
-            android:name=".SettingsActivity"
+            android:name=".LearnAndroidActivity"
+            android:label="@string/title_activity_main"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme" />
-
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".DrawerActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
+        <activity
+            android:name=".UdemyCourcesActivity"
+            android:screenOrientation="sensorPortrait"
+            android:windowSoftInputMode="adjustNothing"></activity>
     </application>
 
 </manifest>
